fix alignment error

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,6 +40,8 @@
 .hero-description p {
   font-weight:250;
   max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
@@ -77,7 +79,6 @@ footer a:hover{
 }
 
 #mixture-canvas {
-  // border: 2px solid black;
   position: relative;
   align-items: center;
   isolation: isolate;
@@ -85,7 +86,7 @@ footer a:hover{
 
 #mixture-canvas img{
   position: absolute;
-  mix-blend-mode: screen;
+  mix-blend-mode: divide;
   height: 100%;
   width: auto;
   max-width: 100%;
